syntax = "proto3";

package com.ngleanhvu.common.proto;

option java_multiple_files = true;
option java_package = "com.ngleanhvu.common.proto";

message District {
  int32 id = 1;
  string name = 2;
  int32 city_id = 3;
}

message DistrictRequest {
  int32 id = 1;
}

service DistrictService {
  rpc GetDistrictById (DistrictRequest) returns (District);
}
